--- a/_posts/2022-2-8-激光雷达和相机的外参标定.md
+++ b/_posts/2022-2-8-激光雷达和相机的外参标定.md
@@ -6,9 +6,14 @@ description:
 comments: true
 categories: sensors
 ---
+[[code]](https://github.com/HITSZ-NRSL/lidar_camera_calibrator)
+
+<iframe width="560" height="400" src="https://www.youtube.com/embed/uew143NcVQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 我本科毕设课题是激光雷达与相机的外参标定，最近抽空整理了一下当时完成的标定工具，这篇博客的目的也是来介绍一下这个标定工具(目前已经[开源](https://github.com/HITSZ-NRSL/lidar_camera_calibrator))。
 
 ## 介绍
+
 
 在当时的研究现状(两年前，现在应该也大差不差)中，主要有基于特征对应关系的方法、基于运动观测的方法、基于最大化互信息的方法和还有少数基于神经网络的方法。在实际进行标定时，我们一般在乎的是标定方法的两个指标——精度和自动化程度，精度也就是标定的外参有多么精确，一般可以通过投影来定性的来看出来，自动化程度指的是这种方法在标定时需要进行什么操作(比如特定的数据录制要求)，以及需要满足什么前提条件(比如特定的标定板)等等。目前四种标定方法的特点如下表所示(个人调研结果)。
 
