feat: 🎸 update projects

--- a/_posts/2022-2-8-激光雷达和相机的外参标定.md
+++ b/_posts/2022-2-8-激光雷达和相机的外参标定.md
@@ -7,8 +7,7 @@ comments: true
 categories: sensors
 ---
 [[code]](https://github.com/HITSZ-NRSL/lidar_camera_calibrator)
-
-<iframe width="560" height="400" src="https://www.youtube.com/embed/uew143NcVQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+[[video]](https://youtu.be/uew143NcVQw)
 
 我本科毕设课题是激光雷达与相机的外参标定，最近抽空整理了一下当时完成的标定工具，这篇博客的目的也是来介绍一下这个标定工具(目前已经[开源](https://github.com/HITSZ-NRSL/lidar_camera_calibrator))。
 
@@ -76,3 +75,5 @@ categories: sensors
         {% include figure.html path="assets/img/2022-2-8-激光雷达和相机的外参标定.assets/image-20220209144004606.png" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
+
+<iframe width="560" height="400" src="https://www.youtube.com/embed/uew143NcVQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
