--- a/_posts/2022-2-8-激光雷达和相机的外参标定.md
+++ b/_posts/2022-2-8-激光雷达和相机的外参标定.md
@@ -77,3 +77,11 @@ categories: sensors
 </div>
 
 <iframe width="560" height="400" src="https://www.youtube.com/embed/uew143NcVQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
+
+## Supporters
+
+[![Stargazers repo roster for @HITSZ-NRSL/lidar_camera_calibrator](https://reporoster.com/stars/HITSZ-NRSL/lidar_camera_calibrator)](https://github.com/HITSZ-NRSL/lidar_camera_calibrator/stargazers)
+
+[![Forkers repo roster for @HITSZ-NRSL/lidar_camera_calibrator](https://reporoster.com/forks/HITSZ-NRSL/lidar_camera_calibrator)](https://github.com/HITSZ-NRSL/lidar_camera_calibrator/network/members)
